--- a/src/shared/i18n/messages/ko/utilinent.json
+++ b/src/shared/i18n/messages/ko/utilinent.json
@@ -15,7 +15,9 @@
     "subtitle2": "여러 조건을 동시에 검사",
     "2": "<cd>when</cd>에 배열을 전달하면 배열의 모든 요소가 truthy일 때만 children이 렌더링됩니다.",
     "subtitle3": "DOM 구조 유지 및 레이아웃 안정성",
-    "3": "<cd>Show.div</cd>, <cd>Show.span</cd> 같은 태그 기반 변형을 사용하면, 외부 DOM 노드는 항상 존재시키면서 내부 콘텐츠만 조건에 따라 교체할 수 있습니다. 이렇게 하면 레이아웃이나 CSS가 불필요하게 깨지는 것을 방지하고, 시맨틱한 마크업을 유지하면서 조건부 렌더링을 안전하게 적용할 수 있습니다."
+    "3": "<cd>Show.div</cd>, <cd>Show.span</cd> 같은 태그 기반 변형을 사용하면, 외부 DOM 노드는 항상 존재시키면서 내부 콘텐츠만 조건에 따라 교체할 수 있습니다. 이렇게 하면 레이아웃이나 CSS가 불필요하게 깨지는 것을 방지하고, 시맨틱한 마크업을 유지하면서 조건부 렌더링을 안전하게 적용할 수 있습니다.",
+    "subtitle4": "Showable",
+    "4": "<cd>Showable</cd>은 <cd>Show</cd> 컴포넌트 내부에서 사용되는 특수 컴포넌트로, 정적인 콘텐츠와 조건부 콘텐츠를 혼합할 때 유용합니다. <cd>Show.div</cd>는 항상 렌더링되지만, 내부의 <cd>Showable</cd>만 <cd>when</cd> 조건에 따라 렌더링됩니다. 이를 통해 헤더나 푸터 같은 고정 요소는 유지하면서 특정 부분만 조건부로 표시할 수 있습니다."
   },
   "observer": {
     "0": "<cd>Observer</cd>는 뷰포트 기반 렌더링을 통해 초기 로드 비용과 불필요한 렌더링을 줄이는 성능 최적화용 컴포넌트입니다. 내부적으로는 조건부 렌더링을 담당하는 <cd>Show</cd> 컴포넌트와, 요소의 가시성 변화를 감지하는 <cd>useIntersectionObserver</cd> 훅을 조합해 구현되어 있습니다. 이 조합은 이미지 지연 로딩, 무한 스크롤, 스크롤 기반 애니메이션 트리거 등 실제 사용자가 보는 시점에만 무거운 작업을 수행하도록 설계되어 초기 렌더링을 가볍게 만듭니다.",
@@ -42,7 +44,9 @@
     "subtitle1": "기본 사용법",
     "1": "배열이 비어있을 때의 처리를 별도 조건문 없이 선언적으로 표현할 수 있습니다. <cd>fallback</cd>은 빈 배열뿐만 아니라 <cd>null</cd>이나 <cd>undefined</cd>일 때도 표시됩니다.",
     "subtitle2": "DOM 구조 유지 및 레이아웃 안정성",
-    "2": "<cd>For.ui</cd>, <cd>For.div</cd> 같은 태그 기반 변형을 사용하면, 외부 DOM 노드는 항상 존재시키면서 내부 콘텐츠만 조건에 따라 교체할 수 있습니다. 이렇게 하면 레이아웃이나 CSS가 불필요하게 깨지는 것을 방지하고, 시맨틱한 마크업을 유지하면서 조건부 렌더링을 안전하게 적용할 수 있습니다."
+    "2": "<cd>For.ui</cd>, <cd>For.div</cd> 같은 태그 기반 변형을 사용하면, 외부 DOM 노드는 항상 존재시키면서 내부 콘텐츠만 조건에 따라 교체할 수 있습니다. 이렇게 하면 레이아웃이나 CSS가 불필요하게 깨지는 것을 방지하고, 시맨틱한 마크업을 유지하면서 조건부 렌더링을 안전하게 적용할 수 있습니다.",
+    "subtitle3": "Forrable",
+    "3": "<cd>Forrable</cd>은 <cd>For</cd> 컴포넌트 내부에서 사용되는 특수 컴포넌트로, 정적인 콘텐츠와 동적 리스트를 혼합할 때 유용합니다. <cd>For.ul</cd>은 항상 렌더링되지만, 내부의 <cd>Forrable</cd>만 배열의 각 항목에 대해 반복됩니다. 이를 통해 헤더나 푸터 같은 고정 요소는 유지하면서 특정 부분만 반복 렌더링할 수 있습니다."
   },
   "repeat": {
     "0": "<cd>Repeat</cd>은 동일한 UI 블록을 반복적으로 렌더링할 때 사용하는 간결한 유틸리티입니다. 내부적으로는 리스트 렌더링 전용인 <cd>For</cd> 컴포넌트를 활용해 구현되어 있어, 인덱스 제공, 빈 상태 처리, 그리고 태그 기반 변형까지 자연스럽게 지원합니다. 스켈레톤 로더, 별점 표시, 그리드 레이아웃 등 반복 패턴을 더 직관적이고 선언적으로 표현할 수 있습니다.",
