feat : Slot 및 Switch 컴포넌트 추가 및 플러그인 매니저 구현

--- a/src/shared/i18n/messages/en/metadata.json
+++ b/src/shared/i18n/messages/en/metadata.json
@@ -52,7 +52,8 @@
   "utilinent": {
     "title": "Utilinent - React Control Flow Components",
     "description": "Lightweight library for declarative and intuitive conditional rendering and control flow",
-    "components": "Components - Control Flow Utilities"
+    "components": "Components - Control Flow Utilities",
+    "core": "Core - Extensibility"
   },
   "sicilian": {
     "title": "Sicilian - Form State Management",
