--- a/src/shared/i18n/messages/ko/metadata.json
+++ b/src/shared/i18n/messages/ko/metadata.json
@@ -52,7 +52,8 @@
   "utilinent": {
     "title": "Utilinent - React 제어 흐름 컴포넌트",
     "description": "선언적이고 직관적인 조건부 렌더링과 제어 흐름을 위한 경량 라이브러리",
-    "components": "컴포넌트 - 제어 흐름 유틸리티"
+    "components": "컴포넌트 - 제어 흐름 유틸리티",
+    "core": "코어 - 확장성"
   },
   "sicilian": {
     "title": "Sicilian - 폼 상태 관리",
