--- a/src/shared/i18n/messages/ko/utilinent.json
+++ b/src/shared/i18n/messages/ko/utilinent.json
@@ -9,51 +9,70 @@
     "1": "utilinent가 제공하는 강력한 <cd>Show</cd>와 <cd>For</cd> 컴포넌트를 사용하면, 위 코드를 더 선언적이고 간결하게 개선할 수 있습니다. 로딩 및 데이터 유무에 따른 조건부 렌더링과 목록 렌더링을 직관적으로 처리하는 방법을 확인해 보세요."
   },
   "show": {
-    "0": "<cd>Show</cd>는 복잡한 조건부 렌더링을 선언적이고 직관적으로 표현하게 해 주는 컴포넌트입니다. React에서 흔히 사용하는 삼항 연산자(<cd>? :</cd>)나 논리 연산자(<cd>&&</cd>)로 인해 JSX가 가독성을 잃고 의도가 묻히는 경우가 많은데, <cd>Show</cd>는 그런 분기 로직을 명확한 API로 대체합니다. <cd>when</cd>이 참일 때만 children을 렌더링하고, <cd>fallback</cd>을 이용해 조건이 거짓일 때의 대체 UI를 분명히 지정할 수 있어 코드 의도가 더 선명해집니다.",
+    "0": "<cd>Show</cd>는 조건부 렌더링을 선언적으로 표현하는 컴포넌트입니다. <cd>when</cd>이 truthy면 children을 렌더링하고, 그렇지 않으면 <cd>fallback</cd> (또는 아무것도) 렌더링합니다. 분기 로직을 JSX 밖으로 빼내 의도를 더 명확하게 만듭니다.",
     "subtitle1": "기본 사용법",
-    "1": "가장 간단한 사용 예에서는 <cd>when</cd>에 조건을 넘기고, 필요하면 <cd>fallback</cd>으로 대체 UI를 제공합니다. children을 함수 형태로 전달하면 렌더링 시점의 값을 안전하게 받아 처리할 수 있어 타입 안정성과 표현력이 향상됩니다.",
+    "1": "<cd>when</cd>에 조건을 넘기고 필요하면 <cd>fallback</cd>을 제공합니다. children을 함수로 전달하면 렌더 시점의 값을 받을 수 있습니다.",
     "subtitle2": "여러 조건을 동시에 검사",
-    "2": "<cd>when</cd>에 배열을 전달하면 배열의 모든 요소가 truthy일 때만 children이 렌더링됩니다.",
+    "2": "<cd>when</cd>에 배열을 전달하면 모든 값이 truthy일 때만 children이 렌더링됩니다. 함수 children은 배열 값을 받습니다.",
     "subtitle3": "DOM 구조 유지 및 레이아웃 안정성",
-    "3": "<cd>Show.div</cd>, <cd>Show.span</cd> 같은 태그 기반 변형을 사용하면, 외부 DOM 노드는 항상 존재시키면서 내부 콘텐츠만 조건에 따라 교체할 수 있습니다. 이렇게 하면 레이아웃이나 CSS가 불필요하게 깨지는 것을 방지하고, 시맨틱한 마크업을 유지하면서 조건부 렌더링을 안전하게 적용할 수 있습니다.",
-    "subtitle4": "Showable",
-    "4": "<cd>Showable</cd>은 <cd>Show</cd> 컴포넌트 내부에서 사용되는 특수 컴포넌트로, 정적인 콘텐츠와 조건부 콘텐츠를 혼합할 때 유용합니다. <cd>Show.div</cd>는 항상 렌더링되지만, 내부의 <cd>Showable</cd>만 <cd>when</cd> 조건에 따라 렌더링됩니다. 이를 통해 헤더나 푸터 같은 고정 요소는 유지하면서 특정 부분만 조건부로 표시할 수 있습니다."
+    "3": "<cd>Show.div</cd> 또는 <cd>Show.span</cd>을 사용하면 외부 DOM을 유지하면서 내부 콘텐츠만 교체할 수 있습니다."
+  },
+  "switch": {
+    "0": "<cd>Switch</cd>는 <cd>Match</cd>를 순서대로 평가해 가장 먼저 매칭되는 항목을 렌더링합니다. 매칭 규칙은 <cd>Show</cd>와 동일하며, 아무 것도 매칭되지 않으면 <cd>fallback</cd>이 렌더링됩니다.",
+    "subtitle1": "기본 사용법",
+    "1": "<cd>Switch</cd> 내부에 여러 <cd>Match</cd>를 배치하고 필요하면 <cd>fallback</cd>을 제공하세요.",
+    "subtitle2": "함수형 children",
+    "2": "<cd>Match</cd>에 함수를 전달하면 해당 분기의 값을 인자로 받을 수 있습니다.",
+    "subtitle3": "DOM 구조 유지 및 레이아웃 안정성",
+    "3": "<cd>Switch.div</cd>를 사용하면 래퍼 요소를 유지한 채 매칭된 콘텐츠만 교체할 수 있습니다."
+  },
+  "mount": {
+    "0": "<cd>Mount</cd>는 children을 함수로 받거나 Promise를 반환할 수 있게 해, 비동기 결과가 준비되면 렌더링합니다. Promise가 해결되는 동안 <cd>fallback</cd>을 보여주고 오류는 <cd>onError</cd>로 전달합니다.",
+    "subtitle1": "기본 사용법",
+    "1": "children 함수에서 React 노드 또는 Promise를 반환해 렌더링 시점을 지연할 수 있습니다.",
+    "subtitle2": "에러 처리",
+    "2": "<cd>onError</cd>로 예외나 Promise 거부를 처리하고 안전한 <cd>fallback</cd> UI를 제공합니다.",
+    "subtitle3": "DOM 구조 유지 및 레이아웃 안정성",
+    "3": "<cd>Mount.div</cd> 같은 태그 변형을 사용하면 래퍼 요소를 유지하면서 내용만 교체할 수 있습니다."
   },
   "observer": {
-    "0": "<cd>Observer</cd>는 뷰포트 기반 렌더링을 통해 초기 로드 비용과 불필요한 렌더링을 줄이는 성능 최적화용 컴포넌트입니다. 내부적으로는 조건부 렌더링을 담당하는 <cd>Show</cd> 컴포넌트와, 요소의 가시성 변화를 감지하는 <cd>useIntersectionObserver</cd> 훅을 조합해 구현되어 있습니다. 이 조합은 이미지 지연 로딩, 무한 스크롤, 스크롤 기반 애니메이션 트리거 등 실제 사용자가 보는 시점에만 무거운 작업을 수행하도록 설계되어 초기 렌더링을 가볍게 만듭니다.",
+    "0": "<cd>Observer</cd>는 요소가 뷰포트에 들어왔을 때만 children을 렌더링합니다. 보이지 않을 때는 <cd>fallback</cd>을 보여주고 교차 시점에 콜백을 받을 수 있습니다.",
     "subtitle1": "기본 사용법",
-    "1": "가장 간단한 형태에서는 <cd>Observer</cd>에 <cd>fallback</cd>을 제공하고, 대상 요소가 뷰포트에 진입하면 실제 children이 렌더링됩니다. 예: 이미지를 지연 로드하거나, 아래로 스크롤했을 때만 무거운 컴포넌트를 마운트하는 경우에 유용합니다.",
-    "subtitle2": "고급 사용법",
-    "2": "<cd>onIntersect</cd> 콜백을 활용하면 특정 지점에 도달했을 때 데이터 프리페칭, 분석 이벤트 전송, 또는 UI 전환을 자동으로 수행할 수 있습니다. 예를 들어 사용자가 섹션에 도달하면 해당 섹션 관련 API를 미리 호출해 지연 시간을 줄이거나, 무한 스크롤에서 다음 페이지를 미리 로드하는 패턴에 활용할 수 있습니다.",
-    "3": "내부에서 사용하는 <cd>useIntersectionObserver</cd> 훅은 복잡한 Intersection Observer API를 간단한 React 훅으로 추상화합니다. Intersection Observer는 요소의 가시성을 효율적으로 감지할 수 있는 브라우저 API이지만, 직접 사용하면 설정과 정리 로직이 복잡합니다. 이 훅은 Intersection Observer를 React의 라이프사이클에 맞게 추상화하여, ref와 상태만으로 간단하게 요소의 뷰포트 진입 여부를 추적할 수 있게 해줍니다. 스크롤 애니메이션, 지연 로딩, 무한 스크롤 등 다양한 시나리오에서 활용할 수 있습니다."
+    "1": "<cd>fallback</cd>으로 플레이스홀더를 제공하고, 보이는 순간에만 무거운 콘텐츠를 마운트하세요.",
+    "subtitle2": "한 번만 트리거 & 콜백",
+    "2": "<cd>triggerOnce</cd>로 첫 교차 이후 관찰을 멈추고, <cd>onIntersect</cd>로 사이드 이펙트를 실행할 수 있습니다.",
+    "subtitle3": "useIntersectionObserver 훅",
+    "3": "훅은 <cd>ref</cd>, <cd>isIntersecting</cd>, <cd>entry</cd>를 제공해 커스텀 동작을 만들 수 있습니다."
   },
   "optional": {
-    "0": "<cd>OptionalWrapper</cd>는 조건부 래핑(conditional wrapping) 패턴을 간결하게 처리하는 유틸리티 컴포넌트입니다. 내부적으로는 렌더 여부를 결정하는 <cd>Show</cd> 컴포넌트를 사용해 조건부로 래핑을 적용하므로, 복잡한 삼항 연산자나 중복된 래퍼 코드를 피할 수 있습니다. 예를 들어 링크가 필요할 때는 <cd>a</cd> 태그로 감싸고, 필요하지 않을 때는 단순히 컨텐츠만 렌더링하도록 선언적으로 표현할 수 있습니다.",
+    "0": "<cd>OptionalWrapper</cd>는 마크업을 복제하지 않고 조건부로 래핑하는 패턴을 제공합니다. 내부적으로 <cd>Show</cd>를 사용하므로 <cd>when</cd>이 truthy면 래퍼가 적용되고, falsy면 <cd>fallback</cd> 또는 원본 children이 렌더링됩니다.",
     "subtitle1": "기본 사용법",
-    "1": "가장 기본적인 형태에서는 조건(true/false)에 따라 지정한 래퍼로 컨텐츠를 감싸거나, 조건이 거짓일 경우 래퍼 없이 컨텐츠만 렌더링합니다. 이 패턴은 버튼 또는 링크를 조건부로 적용할 때 유용합니다."
+    "1": "<cd>when</cd>과 <cd>wrapper</cd> 함수를 제공하면 children을 조건부로 감쌀 수 있습니다.",
+    "subtitle2": "대체 래퍼",
+    "2": "<cd>fallback</cd>을 이용해 조건이 거짓일 때 다른 래퍼를 적용할 수 있습니다."
   },
   "slacker": {
-    "0": "<cd>Slacker</cd>는 대용량 웹 애플리케이션에서 초기 로드 비용을 줄이고 사용자 경험을 개선하기 위해 설계된 데이터 지연 로딩 컴포넌트입니다. 내부적으로는 뷰포트 감지를 담당하는 <cd>Observer</cd>와 결합되어, 해당 컴포넌트가 실제로 뷰포트에 진입했을 때만 비동기 <cd>loader</cd>를 실행합니다. 이 접근 방식은 API 호출, 동적 import, 무거운 데이터 페칭 등 비용이 큰 작업을 필요 시점에만 수행하게 하여 초기 렌더 시간을 크게 단축합니다.",
+    "0": "<cd>Slacker</cd>는 뷰포트에 들어올 때 데이터를 로딩합니다. <cd>Observer</cd>와 <cd>loader</cd>를 결합해 로딩/에러/재시도 상태를 처리합니다.",
     "subtitle1": "기본 사용법",
-    "1": "간단한 사용 예에서는 <cd>loader</cd>를 전달하고, 요소가 뷰포트에 진입하면 로더가 실행되어 반환된 데이터를 children에 전달합니다. 예: 큰 이미지 컬렉션, 위젯 데이터, 또는 페이지 섹션별 API 결과를 지연 로드할 때 유용합니다.",
+    "1": "<cd>loader</cd>를 제공하고, 로딩된 데이터를 children에서 렌더링합니다.",
     "subtitle2": "에러 처리 및 재시도",
-    "2": "<cd>errorFallback</cd>에 함수를 전달하면 에러 정보와 재시도 함수를 받아 커스텀 UI를 렌더링할 수 있습니다. <cd>maxRetries</cd>와 지연 간격(backoff)을 설정해 자동 재시도를 구성할 수 있으며, 네트워크 오류나 일시적 실패를 우아하게 처리할 수 있습니다."
+    "2": "<cd>errorFallback</cd>, <cd>maxRetries</cd>, <cd>retryDelay</cd>로 실패를 우아하게 처리합니다."
   },
   "for": {
-    "0": "<cd>For</cd>는 리스트 렌더링과 빈 상태 처리를 하나로 통합한 선언적 컴포넌트입니다. React에서 리스트를 렌더링할 때 일반적으로 <cd>Array.map()</cd>을 사용하지만, 빈 배열이거나 데이터가 없을 때의 처리를 위해 추가적인 조건 분기가 필요했습니다. <cd>For</cd> 컴포넌트는 이러한 패턴을 하나로 통합하여, 배열 순회와 빈 상태 처리를 동시에 선언적으로 표현할 수 있게 해줍니다.",
+    "0": "<cd>For</cd>는 배열 렌더링과 빈 상태 처리를 하나로 합친 컴포넌트입니다. <cd>map</cd>과 추가 조건문을 하나의 선언적 블록으로 대체합니다.",
     "subtitle1": "기본 사용법",
-    "1": "배열이 비어있을 때의 처리를 별도 조건문 없이 선언적으로 표현할 수 있습니다. <cd>fallback</cd>은 빈 배열뿐만 아니라 <cd>null</cd>이나 <cd>undefined</cd>일 때도 표시됩니다.",
+    "1": "렌더 함수로 항목을 그리며, 배열이 비어있거나 null/undefined일 때 <cd>fallback</cd>을 표시할 수 있습니다.",
     "subtitle2": "DOM 구조 유지 및 레이아웃 안정성",
-    "2": "<cd>For.ui</cd>, <cd>For.div</cd> 같은 태그 기반 변형을 사용하면, 외부 DOM 노드는 항상 존재시키면서 내부 콘텐츠만 조건에 따라 교체할 수 있습니다. 이렇게 하면 레이아웃이나 CSS가 불필요하게 깨지는 것을 방지하고, 시맨틱한 마크업을 유지하면서 조건부 렌더링을 안전하게 적용할 수 있습니다.",
-    "subtitle3": "Forrable",
-    "3": "<cd>Forrable</cd>은 <cd>For</cd> 컴포넌트 내부에서 사용되는 특수 컴포넌트로, 정적인 콘텐츠와 동적 리스트를 혼합할 때 유용합니다. <cd>For.ul</cd>은 항상 렌더링되지만, 내부의 <cd>Forrable</cd>만 배열의 각 항목에 대해 반복됩니다. 이를 통해 헤더나 푸터 같은 고정 요소는 유지하면서 특정 부분만 반복 렌더링할 수 있습니다."
+    "2": "<cd>For.ul</cd> 또는 <cd>For.div</cd>를 사용하면 컨테이너를 유지한 채 내부 리스트만 교체할 수 있습니다.",
+    "subtitle3": "키 처리",
+    "3": "렌더 함수가 반환하는 요소에는 안정적인 <cd>key</cd>를 지정하세요."
   },
   "repeat": {
-    "0": "<cd>Repeat</cd>은 동일한 UI 블록을 반복적으로 렌더링할 때 사용하는 간결한 유틸리티입니다. 내부적으로는 리스트 렌더링 전용인 <cd>For</cd> 컴포넌트를 활용해 구현되어 있어, 인덱스 제공, 빈 상태 처리, 그리고 태그 기반 변형까지 자연스럽게 지원합니다. 스켈레톤 로더, 별점 표시, 그리드 레이아웃 등 반복 패턴을 더 직관적이고 선언적으로 표현할 수 있습니다.",
+    "0": "<cd>Repeat</cd>는 동일한 UI 블록을 지정한 횟수만큼 렌더링합니다. 스켈레톤, 별점, 플레이스홀더에 유용합니다.",
     "subtitle1": "기본 사용법",
-    "1": "반복 횟수(count)만 지정하면 되고, 렌더 콜백에서 현재 인덱스를 받아 각 항목에 고유한 값을 부여하거나 콘텐츠를 생성할 수 있습니다. 코드가 간결해지고 의도가 명확해집니다.",
+    "1": "<cd>times</cd>에 양의 정수를 지정하고 인덱스를 받아 렌더링합니다. <cd>times</cd>가 유효하지 않으면 <cd>fallback</cd>이 렌더링됩니다.",
     "subtitle2": "DOM 구조 유지 및 레이아웃 안정성",
-    "2": "<cd>Repeat</cd>는 태그 기반 변형(예: <cd>Repeat.div</cd>)을 제공하여 외부 컨테이너를 항상 유지하면서 내부 콘텐츠만 반복할 수 있습니다. 이로 인해 CSS 레이아웃이 깨지는 것을 방지하고, 스켈레톤 또는 그리드 레이아웃에서 일관된 마크업을 유지할 수 있습니다."
+    "2": "<cd>Repeat.div</cd> 같은 태그 변형은 래퍼 요소를 유지한 채 내용을 반복합니다."
   },
   "slot": {
     "0": "<cd>Slot</cd>은 컴포넌트 합성의 유연성을 극대화하는 고급 패턴 구현입니다. 재사용 가능한 컴포넌트를 만들 때, 내부 구조를 유지하면서도 사용자가 원하는 요소로 렌더링하고 싶을 때가 있습니다. 예를 들어 Button 컴포넌트가 때로는 실제 <cd>'<'button'>'</cd> 태그로, 때로는 <cd>'<'a'>'</cd> 태그로 렌더링되어야 하는 경우입니다. <cd>Slot</cd>은 부모 컴포넌트의 props를 자식 요소에 지능적으로 병합하여, 이러한 유연성을 제공하면서도 스타일, 이벤트 핸들러, ref 등을 모두 보존합니다.",
@@ -61,5 +80,18 @@
     "1": "<cd>asChild</cd> 패턴을 사용하여 컴포넌트의 렌더링 요소를 외부에서 제어할 수 있습니다. Button의 스타일과 동작을 유지하면서 다른 요소로 렌더링할 수 있습니다.",
     "subtitle2": "Slottable",
     "2": "복잡한 구조에서 특정 자식에게만 props를 전달하고 싶을 때 <cd>Slottable</cd>로 감싸면 됩니다. 아이콘과 텍스트를 조합한 버튼 등에 유용합니다."
+  },
+  "createProxy": {
+    "0": "<cd>createProxy</cd>는 <cd>Show.div</cd>나 <cd>For.ul</cd>처럼 동일한 동작을 다양한 태그로 제공하는 컴포넌트 패밀리를 만들며, 라이브러리 외부에서도 활용할 수 있습니다. 아래 단계는 Custom Clickable 예제로 전체 흐름을 설명합니다.",
+    "subtitle1": "props와 base 정의",
+    "1": "공통 동작을 담은 base 컴포넌트를 먼저 정의합니다. 프록시는 이를 태그 변형마다 재사용합니다.",
+    "1a": "왜 <cd>BaseClickableType&lt;X = object&gt;</cd>인가요? 프록시는 <cd>ClickableProps</cd>와 태그/컴포넌트 고유 props를 함께 받아야 합니다. <cd>X</cd>는 태그 props 자리이고 <cd>X &amp; ClickableProps</cd>로 병합됩니다. 기본값 <cd>object</cd>는 base를 추가 props 없이도 쓰기 쉽게 해줍니다. 제네릭이 없으면 <cd>Clickable.div</cd> 같은 변형에서 <cd>className</cd>, <cd>href</cd>, <cd>role</cd> 같은 네이티브 props 타입이 사라집니다.",
+    "subtitle2": "renderForTag + ProxyType 추가",
+    "2": "태그 렌더러와 프록시 타입을 정의해 <cd>Clickable.div</cd> 같은 변형을 타입으로 보장합니다.",
+    "2a": "왜 <cd>BaseClickableFn extends BaseTypeHelperFn</cd>이고 <cd>this[\"props\"]</cd>를 쓰나요? <cd>ProxyType</cd>은 <cd>BaseTypeHelperFn</cd>을 타입 레벨 함수처럼 취급합니다. 각 태그의 props를 <cd>props</cd> 슬롯에 주입한 뒤 <cd>type</cd>을 평가해 최종 시그니처를 만듭니다. <cd>this[\"props\"]</cd>를 사용해야 태그별 props가 반영되어 <cd>Clickable.div</cd>는 <cd>ComponentPropsWithRef&lt;\"div\"&gt;</cd> + <cd>ClickableProps</cd>가 되고, <cd>Clickable.Link</cd>는 등록된 컴포넌트 props를 받습니다. 여기에 <cd>ClickableProps</cd>만 고정하면 태그 props가 전달되지 않습니다.",
+    "subtitle3": "커스텀 컴포넌트 등록 (선택)",
+    "3": "카테고리에 컴포넌트를 등록하고 <cd>UtilinentRegister</cd>를 확장해 <cd>Clickable.*</cd>를 타입 안전하게 사용합니다.",
+    "subtitle4": "사용 예시",
+    "4": "기본 컴포넌트와 태그/컴포넌트 변형을 사용할 수 있습니다."
   }
 }
